--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
 
+    compile 'de.hdodenhof:circleimageview:1.2.1'
+
 }
